# llm-gateway

./: .env.example  .gitignore  CHANGELOG.md  README.md  alembic.ini  docker-compose.yml  knowledge.md  pyproject.toml
app/: __init__.py  main.py
app/api/: router.py  security.py
app/api/routes/: dashboard.py  evals.py  health.py  llm.py  meta.py  metrics.py  traces.py
app/cli/: __init__.py  evals.py
app/core/: __init__.py  config.py  errors.py  model_registry.py  pricing.py  trace.py
app/db/: session.py
app/evals/: __init__.py  runner.py
app/models/: trace.py
app/providers/: base.py  factory.py  mock.py  openai_compatible.py  schema_normalizer.py
app/repositories/: traces.py
app/schemas/: evals.py  llm.py  trace.py
app/services/: execution.py  rate_limits.py  routing.py  validation.py
app/workers/: trace_worker.py
migrations/: README.md  env.py
migrations/versions/: 202605130001_initial_trace_tables.py  202605130002_add_prompt_versioning_and_attempt_kind.py  README.md
tests/: conftest.py  test_auth.py  test_dashboard.py  test_evals.py  test_execute.py  test_health.py  test_metrics.py  test_openai_provider.py  test_routing.py  test_traces.py
